feat: 메인·AI코딩·인증 개선 및 문서·시드 추가
- 메인: 개인화 요약, 활동 사용자 통계, 디자인 시스템 정리
- AI 코딩: 제출/이력/통계, DTO 분리, Kotlin 시드, problem_submissions 스키마
- 인증: CSRF(th:action·X-XSRF-TOKEN), Remember Me, @Valid, passConfirm 검증
- 공통: MvcValidationExceptionHandler, LocalDevHttpCacheConfig, 정보 도메인 분리 컨트롤러
- docs: 기획·테스트·작업 지시서, HELP.md 제거
- 테스트: UserService 단위 테스트 등 src/test 추가

Made-with: Cursor